deployments/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-virtual-service
spec:
  gateways:
    - blog-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/api.protobuf.PostService"
      route:
        - destination:
            host: post-server.default.svc.cluster.local
            port:
              number: 50052
    - match:
        - uri:
            prefix: "/api.protobuf.AuthService"
      route:
        - destination:
            host: auth-server.default.svc.cluster.local
            port:
              number: 50054
    - match:
        - uri:
            prefix: "/api.protobuf.CommentService"
      route:
        - destination:
            host: comment-server.default.svc.cluster.local
            port:
              number: 50053
